@@ -1,6 +1,7 @@
-* Tue Oct 11 2005 Michael Chapman <mike.chapman@optus.net> 2.1.9
+* Tue Oct 11 2005 Brendan O'Dea <bod@optus.net> 2.1.9
 - Fix Calling-Station-Id in RADIUS accounting records (Slobodan Tomic).
 - Fix RADIUS authentication on DAE responses.
+- Don't send tunnel HELLO when there are pending control messages.
 
 * Mon Sep 19 2005 Brendan O'Dea <bod@optus.net> 2.1.8
 - Move code from signal handlers into mainloop, avoiding a race
